# conjr

./: .gitignore  Pipfile  README.md  config.json  go.mod  go.sum  localSettings.json  main.go  oauth.go  pyproject.toml  setup.py  utils.go
src/: config.json  localSettings.json  main.go  main.py
