[tool.poetry]
name = "conjr"
version = "0.1.0"
description = "Configure and Report"
authors = ["John Naylor <jonaylor89@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
google-auth-oauthlib = "^0.3.0"
gspread = "^3.1"
oauth2client = "^4.1"
google-api-python-client = "^1.7"
google-auth-httplib2 = "^0.0.3"

[tool.poetry.dev-dependencies]
mypy = "^0.701.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
